Test ipad chrome z-index fix

--- a/django/frawt/static/live/fp.css
+++ b/django/frawt/static/live/fp.css
@@ -291,10 +291,11 @@ nav ul li {
 #filter_form {
 	position: relative;
     transform: translateY(-100%);
-	z-index: 25;
+	z-index: 24;
 	margin: 0;
     -webkit-transform: translateY(-100%);
 	-moz-transform: translateY(-100%);
+	transform-style: preserve-3d;
 }
 
 .t-hover td:hover {
